--- a/samplecode.rc
+++ b/samplecode.rc
@@ -1,32 +1,42 @@
-timestep/distance/speed/score
+//timestep/distance/speed/score
 
 function main : void () {
-	Map $gameMap: Map {
+	//vdecls
+	Map $gameMap;
+	Player $me;
+	//stmts
+	$gameMap: Map {
 		$height: 1024,
 		$width: 768,
 		$generator: $generateThis
 	};
-
-	Player $me : Player {
-		$shape:
-		$height:
-		$width:
-		$color?:
+	$me : Player {
+		$color: "red",
+		$shape: "triangle",
+		$height: 20,
+		$width: 20,
+		$y: 500
 	}
 
 	Run($gameMap, $me);
 }
 
 function $generateThis: Array () {
-	Array $output : Array Block dynamic;
-	Block $top : Block {
+	//vdecls
+	Array Brick $output;
+	Brick $top;
+	Brick $bottom;
+	//stmts
+	$output : Array Brick;
+
+	$top : Brick {
 		$height: 20,
 		$width: 1024,
 		$x: 0,
 		$y: 1004
 	};
 	$output.push($top);
-	Block $bottom : Block {
+	$bottom : Brick {
 		$height: 20,
 		$width: 1024,
 		$x: 0,
@@ -40,14 +50,14 @@ function $generateThis: Array () {
 //j = 0
 //for (int i = 0; i < 500; i++)
 //{
-//	new Block(i, 1, j, 0, red);
+//	new Brick(i, 1, j, 0, red);
 //	j++;
 //}
 
-Block
+/*Brick
 	-height
 	-width
 	-x	
 	-y
-	-color
+	-color */
 
