--- a/samplecode.rc
+++ b/samplecode.rc
@@ -5,18 +5,8 @@ function main : void () {
 	Map $gameMap;
 	Player $me;
 	//stmts
-	$gameMap: Map {
-		$height: 1024,
-		$width: 768,
-		$generator: $generateThis
-	};
-	$me : Player {
-		$color: "red",
-		$shape: "triangle",
-		$height: 20,
-		$width: 20,
-		$y: 500
-	}
+	$gameMap: Map(1024, 768, $generateThis);
+	$me : Player("red", "triangle", 20, 20, 500);
 
 	Run($gameMap, $me);
 }
@@ -29,19 +19,9 @@ function $generateThis: Array () {
 	//stmts
 	$output : Array Brick;
 
-	$top : Brick {
-		$height: 20,
-		$width: 1024,
-		$x: 0,
-		$y: 1004
-	};
+	$top : Brick("red", 20, 1024, 0, 1004);
 	$output.push($top);
-	$bottom : Brick {
-		$height: 20,
-		$width: 1024,
-		$x: 0,
-		$y: 0
-	};
+	$bottom : Brick("red", 20, 1024, 0, 0);
 	$output.push($bottom);
 	return $output;
 }
