--- a/tests/Array/test-obj1.rc
+++ b/tests/Array/test-obj1.rc
@@ -11,7 +11,6 @@ function $main : void ()
 	$b1 : new Brick(100,150,200,$vertices,20,30);
 
 
-
 	$printstring("Should print 100 150 200 20 30");
 
 	$printint($b1.$colorR);
@@ -33,8 +32,8 @@ function $main : void ()
 	$printint($b1.$y);
 
 
-	//$printstring("Should print 567 789");
-	//$printint($b1.($vertices[0]));
-	//$printint($b1.($vertices[1]));
+	$printstring("Should print 567 789");
+	$printint($b1.$vertices[0]);
+	$printint($b1.$vertices[1]);
 
 }
