Added Shell Script and Test suite reference
- Now shell script can run against reference to automate test suite
checking

--- a/tests/Basic/test-gcd.rc
+++ b/tests/Basic/test-gcd.rc
@@ -1,6 +1,13 @@
 function $gcd : int (int $a, int $b) {
-	
-  return $a;
+
+	while ($a != $b) 
+	{
+		if ($a > $b) 
+			$a -: $b;
+		else
+			$b -: $a;
+	}
+  	return $a;
 }
 
 function $main : void ()
