Now supports polygon collision detection

--- a/Test_GraphicsGPC/Makefile
+++ b/Test_GraphicsGPC/Makefile
@@ -2,7 +2,7 @@ OBJS = testGraphics.cmo
 
 CONF=-I +threads
 
-LIBS=$(WITHGRAPHICS) $(WITHUNIX) $(WITHTHREADS)
+LIBS=$(WITHGRAPHICS) $(WITHUNIX) $(WITHTHREADS) $(WITHGPC)
 
 # Default setting of the WITH* variables. Should be changed if your
 # local libraries are not found by the compiler.
@@ -11,6 +11,8 @@ WITHGRAPHICS =graphics.cma -cclib -lgraphics -cclib -L/usr/X11R6/lib -cclib -lX1
 WITHTHREADS =threads.cma -cclib -lthreads
 
 WITHUNIX =unix.cma -cclib -lunix
+
+WITHGPC =camlgpc.cma -cclib -L.
 
 testGraphics : $(OBJS)
 	ocamlc $(CONF) -o testGraphics $(LIBS) $(OBJS)
