--- a/tests/Game/test-game1.rc
+++ b/tests/Game/test-game1.rc
@@ -1,9 +1,8 @@
 /* Create global Map object */
-Array int $c;
 
 function $generate : Array Brick () {
-	Array Brick $b;
-	
+	Array int $c;
+    Array Brick $b;
 	Brick $b1;
 
 	$b: new Array Brick;
@@ -19,6 +18,8 @@ function $generate : Array Brick () {
 	$b1 : new Brick(100,100,100,$c,250,50);
 
 	$b[0] : $b1;
+
+	$printstring("test");
 
 	return $b;
 }
