--- a/tests/Game/test-game4-stair.rc
+++ b/tests/Game/test-game4-stair.rc
@@ -1,7 +1,7 @@
 /* Create global Map object */
 Array int $c;
 
-function $getPolygonVerts : Array int (int $size, int $sx, int $sy)
+function $getPolygonVerts : Array int (int $sx, int $sy, int $size)
 {
 	Array int $verts;
 
@@ -22,41 +22,40 @@ function $generate : Array Brick () {
 	int $size;
 	int $startX1; int $startY1;
 	int $startX2; int $startY2;
-	int $r1, int $g1, int $dist1;
-	int $r2, int $g2, int $dist2;
+	int $r1; int $g1; int $dist1;
+	int $r2; int $g2; int $dist2;
 	int $i;
 
 	$brickSet : new Array Brick;
 	$len : 5;
 	$size : 50;
 
+	$startX1 : 100; $startY1 : 200;
+	$startX2 : 500; $startY2 : 0;
+
 	$r1 : 130; $g1 : 130;
 	$r2 : 90; $g2 : 90;
 	$dist1 : 255 - $r1;
 	$dist2 : 255 - $r2;
 
-	for( $i : 0; $i < len; $i +: 1 )
+	for( $i : 0; $i < (2*$len); $i +: 2 )
 	{
-		$brickSet[$i] : new Brick {}
+		$brickSet[$i] : new Brick ($r1 + ($i * $dist1 / $len), 
+									$g1 + ($i * $dist1 / $len), 
+									255,
+									$getPolygonVerts($startX1 + ($i * $size), $startY1 + ($i * $size), $size),
+									$startX1 + ($i * $size),
+									$startY1 + ($i * $size) );
+
+		$brickSet[$i + 1] : new Brick ($r2 + ($i * $dist2 / $len),
+									$g2 + ($i * $dist2 / $len),
+									255,
+									$getPolygonVerts($startX2 + ($i * $size), $startY2 + ($i * $size), $size),
+									$startX2 + ($i * $size),
+									$startY2 + ($i * $size) );
 	}
 
-	Brick $b1;
-
-	$b: new Array Brick;
-
-	$c : new Array int;
-	$c[0] : 250;
-	$c[1] : 50;
-	$c[2] : 300;
-	$c[3] : 100;
-	$c[4] : 250;
-	$c[5] : 100;
-
-	$b1 : new Brick(100,100,100,$c,250,50);
-
-	$b[0] : $b1;
-
-	return $b;
+	return $brickSet;
 }
 
 function $main : void () {
