Removed unused tokens from Bytecode and return types for functions

--- a/tests/Array/test-array1.rc
+++ b/tests/Array/test-array1.rc
@@ -1,4 +1,6 @@
-function $main : void ()
+/* This is a simple test of local array indexes and printing them. */
+
+function $main : ()
 {
 	Array int $myInt;
 	int $i;
