--- a/tests/Game/test-game4-stair.rc
+++ b/tests/Game/test-game4-stair.rc
@@ -1,6 +1,3 @@
-/* Create global Map object */
-Array int $c;
-
 function $getPolygonVerts : Array int (int $sx, int $sy, int $size)
 {
 	Array int $verts;
@@ -22,9 +19,11 @@ function $generate : Array Brick () {
 	int $size;
 	int $startX1; int $startY1;
 	int $startX2; int $startY2;
+	int $startX3; int $startY3;
 	int $r1; int $g1; int $dist1;
-	int $r2; int $g2; int $dist2;
-	int $i;
+	int $r2; int $b2; int $dist2;
+	int $g3; int $b3; int $dist3;
+	int $i; int $j;
 
 	$brickSet : new Array Brick;
 	$len : 5;
@@ -32,27 +31,41 @@ function $generate : Array Brick () {
 
 	$startX1 : 100; $startY1 : 200;
 	$startX2 : 500; $startY2 : 0;
+	$startX3 : 600; $startY3 : 400;
 
 	$r1 : 130; $g1 : 130;
-	$r2 : 90; $g2 : 90;
+	$r2 : 90; $b2 : 90;
+	$g3 : 10; $b3 : 10;
 	$dist1 : 255 - $r1;
-	$dist2 : 255 - $r2;
+	$dist2 : 255 - $b2;
+	$dist3 : 255 - $g3;
 
-	for( $i : 0; $i < (2*$len); $i +: 2 )
+	$j : 0;
+
+	for( $i : 0; $i < (3*$len); $i +: 3 )
 	{
-		$brickSet[$i] : new Brick ($r1 + ($i * $dist1 / $len), 
-									$g1 + ($i * $dist1 / $len), 
+		$brickSet[$i] : new Brick ($r1 + ($j * $dist1 / ($len - 1)), 
+									$g1 + ($j * $dist1 / ($len - 1)), 
 									255,
-									$getPolygonVerts($startX1 + ($i * $size), $startY1 + ($i * $size), $size),
-									$startX1 + ($i * $size),
-									$startY1 + ($i * $size) );
+									$getPolygonVerts($startX1 + ($j * $size), $startY1 + ($j * $size), $size),
+									0,
+									0 );
 
-		$brickSet[$i + 1] : new Brick ($r2 + ($i * $dist2 / $len),
-									$g2 + ($i * $dist2 / $len),
+		$brickSet[$i + 1] : new Brick ($r2 + ($j * $dist2 / ($len - 1)),
 									255,
-									$getPolygonVerts($startX2 + ($i * $size), $startY2 + ($i * $size), $size),
-									$startX2 + ($i * $size),
-									$startY2 + ($i * $size) );
+									$b2 + ($j * $dist2 / ($len - 1)),
+									$getPolygonVerts($startX2 + ($j * $size), $startY2 + ($j * $size), $size),
+									$startX2 + ($j * $size),
+									$startY2 + ($j * $size) );
+
+		$brickSet[$i + 2] : new Brick (255,
+									$g3 + ($j * $dist3 / ($len - 1)),
+									$b3 + ($j * $dist3 / ($len - 1)),
+									$getPolygonVerts($startX3 + ($j * $size), $startY3, $size),
+									0,
+									-100 );
+
+		$j +: 1;
 	}
 
 	return $brickSet;
