--- a/tests/Basic/test-fib.rc
+++ b/tests/Basic/test-fib.rc
@@ -1,10 +1,10 @@
-function $fib : int (int $x)
+function $fib : (int $x)
 {
   if ($x < 2) return 1;
   return $fib($x - 1) + $fib($x - 2);
 }
 
-function $main : void ()
+function $main : ()
 {
 	$printstring("Should be 1");
 	$printint( $fib(0) );
