--- a/tests/Basic/test-func3.rc
+++ b/tests/Basic/test-func3.rc
@@ -1,4 +1,4 @@
-function $printem : void (int $a, int $b, int $c, int $d)
+function $printem : (int $a, int $b, int $c, int $d)
 {
   $printint($a);
   $printint($b);
@@ -6,7 +6,7 @@ function $printem : void (int $a, int $b, int $c, int $d)
   $printint($d);
 }
 
-function $main : void ()
+function $main : ()
 {
   $printem(42,17,192,8);
 }
