--- a/tests/Basic/test-if1.rc
+++ b/tests/Basic/test-if1.rc
@@ -1,6 +1,6 @@
-function $main : void ()
+function $main : ()
 {
 	$printstring("Test if. Should print 42 17");
-  if (1) $printint(42);
-  $printint(17);
+  	if (1) $printint(42);
+  	$printint(17);
 }
