--- a/tests/Basic/test-if3.rc
+++ b/tests/Basic/test-if3.rc
@@ -1,6 +1,6 @@
-function $main : void ()
+function $main : ()
 {
 	$printstring("Should be 17");
-  if (0) $printint(42);
-  $printint(17);
+  	if (0) $printint(42);
+  	$printint(17);
 }
