--- a/tests/Basic/test-if4.rc
+++ b/tests/Basic/test-if4.rc
@@ -1,6 +1,7 @@
-function $main : void ()
+function $main : ()
 {
 	$printstring("Should print 8 17");
-  if (0) $printint(42); else $printint(8);
-  $printint(17);
+  	if (0) $printint(42); 
+  	else $printint(8);
+  	$printint(17);
 }
