--- a/tests/Array/test-array6.rc
+++ b/tests/Array/test-array6.rc
@@ -1,4 +1,4 @@
-function $retIntArray : Array int ()
+function $retIntArray : ()
 {
 	Array int $retArray;
 	int $i;
@@ -12,7 +12,7 @@ function $retIntArray : Array int ()
 }
 
 
-function $retIntArray2 : Array int ()
+function $retIntArray2 : ()
 {
 	Array int $retArray;
 	int $i;
@@ -25,7 +25,7 @@ function $retIntArray2 : Array int ()
 	return $retArray;
 }
 
-function $main : void ()
+function $main : ()
 {	
 	Array int $localArray;
 	int $i;
