--- a/tests/Game/test-game2.rc
+++ b/tests/Game/test-game2.rc
@@ -1,46 +1,66 @@
-/* Create global Map object */
-Array int $c;
 
-function $generate : Array Brick () {
-	Array Brick $b;
-	
-	Brick $b1;
+function $generateBoxVerts: (int $x, int $y, int $size)
+{
+  Array int $box;
+  $box : new Array int;
 
-	$b: new Array Brick;
+  $box[0] : $x;         $box[1] : $y;
+  $box[2] : $x + $size; $box[3] : $y;
+  $box[4] : $x + $size; $box[5] : $y + $size;
+  $box[6] : $x;         $box[7] : $y + $size;
 
-	$c : new Array int;
-	$c[0] : 250;
-	$c[1] : 50;
-	$c[2] : 300;
-	$c[3] : 100;
-	$c[4] : 250;
-	$c[5] : 100;
-
-	$b1 : new Brick(100,100,100,$c,250,50);
-
-	$b[0] : $b1;
-
-	return $b;
+  return $box;
 }
 
-function $main : void () {
-	Map $myMap;
-	Player $p;
-	Array int $v;
+function $generateThis: () {
+  
+  Array int $bvert1;
+  Array int $bvert2;
+  Array int $bvert3;
 
-	$v : new Array int;
+  Brick $b1;
+  Brick $b2;
+  Brick $b3;
 
-	$v[0] : 50;
-	$v[1] : 50;
-	$v[2] : 100;
-	$v[3] : 100;
-	$v[4] : 50;
-	$v[5] : 100;
+  Array Brick $output;
 
-	$p : new Player(100,100,100,$v,50);
-	$myMap : new Map(700,500,$generate);
+  int $i;
 
-	$generate();
+  $bvert1 : new Array int;
+  $bvert2 : new Array int;
+  $bvert3 : new Array int;
+  $output : new Array Brick;
 
-	$Run($myMap, $p);
+  $bvert1 : $generateBoxVerts(200, 100, 50);
+  $bvert2 : $generateBoxVerts(200, 300, 50);
+  $bvert3 : $generateBoxVerts(400, 500, 100);
+
+  $b1 : new Brick(255, 0, 0, $bvert1, 110, 220);
+  $b2 : new Brick(0, 255, 0, $bvert2, 33, 44);
+  $b3 : new Brick(0, 0, 255, $bvert3, 0, 100);
+
+  $output[0] : $b1;
+  $output[1] : $b2;
+  $output[2] : $b3;
+
+  return $output;
+}
+
+function $main : () {
+  
+  Map $gameMap;
+  Player $me;
+  Array int $pvert;
+
+  $pvert : new Array int;
+
+  $pvert[0] : 30; $pvert[1] : 30;
+  $pvert[2] : 40; $pvert[3] : 60;
+  $pvert[4] : 50; $pvert[5] : 30;
+
+  $gameMap: new Map(1024, 768, $generateThis);
+  $me : new Player(123, 123, 123, $pvert, 300);
+
+  $Run($gameMap, $me);
+
 }
