--- a/tests/Game/test-spaceShip.rc
+++ b/tests/Game/test-spaceShip.rc
@@ -18,7 +18,7 @@ function $generate : () {
 		$b1 : new Brick($generateRandomColor(), $generateRandomColor(), $generateRandomColor(), $vertices, $GenerateRandomInt(1000), $GenerateRandomInt(700));
 		$Push($b, $b1);
 	}
-	$printint($ArrayCount($vertices));
+	//$printint($ArrayCount($vertices));
 	return $b;
 }
 
